--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>tes - Interactive Design</title>
+		<title>Dhifa Mutia - Interactive Design</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,10 +19,10 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
-						<nav>
+						<a href="index.html" class="logo"><strong>Template</strong> <span>by HTML5 UP</span></a>
+						<!-- <nav>
 							<a href="#menu">Menu</a>
-						</nav>
+						</nav> -->
 					</header>
 
 				<!-- Menu -->
@@ -33,10 +33,10 @@
 							<li><a href="generic.html">About</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
-						<!-- <ul class="actions stacked">
+						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
-						</ul> -->
+						</ul>
 					</nav>
 
 				<!-- Banner -->
@@ -50,7 +50,7 @@
 								3,5 years i interested to learn design, and now i design applications and playful interaction design. <br/> <br/><br/>	
 								you can't wait to see my work, right? <br/><br/> <br/> <br/><br/>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Start</a></li>
+									<li><a href="#one" class="button next scrolly"></a></li>
 								</ul>
 							</p> 
 								<!-- <ul class="actions">
@@ -67,20 +67,20 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/pic01.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Berbagi Kerja</a></h3>
-										<p>Find and Land Job App</p>
+										<h3><a href="landing.html" class="link">SalaamUstadz (Ustadz)</a></h3>
+										<p>Ustadz Consultation App</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/pic02.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">SalaamUstadz</a></h3>
-										<p>Ustadz Consultation App</p>
+										<h3><a href="landing.html" class="link">Berbagi Kerja</a></h3>
+										<p>Find and Land Job App</p>
 									</header>
 								</article>
 								<article>
@@ -94,14 +94,14 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/pic04.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">SalaamUstadz (Jamaah)</a></h3>
+										<p>Ustadz Consultation App</p>
 									</header>
 								</article>
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
@@ -118,45 +118,160 @@
 										<h3><a href="landing.html" class="link">Etiam</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
-								</article>
+								</article> -->
 							</section>
 
-						<!--ONE 2 -->
-						<section id="two" class="spotlights">
-							<section>
-								<a href="generic.html" class="image">
-									<img src="images/pic08.jpg" alt="" data-position="center center" />
-								</a>
-								<div class="content">
-									<div class="inner">
-										<header class="major">
-											<h3>Orci maecenas</h3>
-										</header>
-										<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-										<ul class="actions">
-											<li><a href="generic.html" class="button">Learn more</a></li>
-										</ul>
+							<!-- Two -->
+							<section id="two" class="spotlights">
+								<section>
+									<a href="generic.html" class="image">
+										<img src="images/pic08.jpg" alt="" data-position="center center" />
+									</a>
+									<div class="content">
+										<div class="inner">
+											<header class="major">
+												<h2>I'm Dhifa</h2>
+											</header>
+											<p>Hi, i'm Dhifa Mutia Wulan Sari. I am a Fresh Graduate from UIN Syarif Hidayatullah Jakarta.
+												I had experience being a designer in several projects and also have an interest and passion in UIUX Design.
+												I have organizational experience in the advocacy and student affairs division, 
+												that's why I am used to doing team work and group discussions but still maintaining my studies and graduating on time with good grades. 
+												in building design I strive to create a design that is true to the product's goals and the visual experience.
+												My goal as a UIUX designer is to create a bridge between a product and its users. I design this bridge that has experiences and stories people can empathize and interact with.
+											</p>
+											<p>
+												I am currently open for designer positions. So if you are interested
+											</p>
+											<ul class="actions">
+												<li><a href="mailto:fayasari611@gmail.com" class="button">Contact Me!</a></li>
+											</ul>
+										</div>
 									</div>
-								</div>
+								</section>
 							</section>
-						</section>
-						<!-- Two -->
-							<section id="two">
+
+							<!--Three-->
+							<!-- <section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h1>Experience</h1>
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 
+							<!-- four -->
+							<section id="one">
+								<div class="inner">
+									<header class="major">
+										<h1>Experience</h1>
+									</header>
+	
+									<!-- Content -->
+										<!-- <h3 id="content">User Interface Design</h3>
+										<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing.</p> -->
+										<div class="row">
+											<div class="col-6 col-12-small">
+												<h3>UIUX Designer, Berbagi Kerja.id</h3>
+													<ul>
+														<li>Designed mobile application about partnership platform for provider (service) and applicant (job seekers) using API. 
+															Create user flow, mockup, wireframe, prototype, and UI element by using Figma.</li>
+														<li>Created website for landing page, including Website Design, User flow, and Website flow.</li>
+													</ul>
+											</div>
+											<div class="col-6 col-12-small">
+												<h3>UI Mentor of team from MAN Insan Cendikia Pekalongan, UMA</h3>
+													<ul>
+														<li>UI mentor for the uma application (Independent Diagnosis Application For Trauma Trigger Using Expert System)
+															 by man IC students who are participating in the KOPSI competition.
+														</li>
+													</ul>										
+											</div>
+											<!-- Break -->
+											<!-- <div class="col-4 col-12-medium"> -->
+											<div class="col-6 col-12-small">
+												<h3>The Winner 3rd Startup Plan Competition, ISFEST 2021 (Information System Festival 2021)</h3>
+													<ul>
+														<li>A competition that was participated by many universities, by providing a startup idea plan and presenting it to the jury. 
+															UIN Jakarta team managed to bring 3rd place.
+														</li>
+													</ul>
+											</div>
+											<div class="col-6 col-12-small">
+												<h3>UIUX Designer, SalaamUstadz</h3>
+												<ul>
+													<li>A mobile application to consulting users (Jamaah) with ustadz/ustadzah at UIN Syarif  Hidayatullah Jakarta and users can reading Islamic articles. 
+														designed using the Design Thinking method and SUS dan SEQ testing method. 
+														Create Empathy Map, How Might We Table, Mind Map, user personas, user flow, mockup, wireframe, prototype, and UI element by using Figma.
+													</li>
+												</ul>
+												<p>
+												</p>
+											</div>
+											<!-- <div class="col-4 col-12-medium">
+												<h3></h3>
+												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+											</div> -->
+										</div>
+									</div>
+							</section>	
+
+							<!-- five -->
+							<section id="one">
+								<div class="inner">
+									<header class="major">
+										<h1>Skills</h1>
+									</header>
+
+									<!-- Content -->
+										<!-- <h3 id="content">User Interface Design</h3>
+										<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing.</p> -->
+										<div class="row">
+											<div class="col-6 col-12-small">
+												<h3>Design</h3>
+													<ul class="alt">
+														<li>User Interface Design</li>
+														<li>Wireframes</li>
+														<li>User Reasearch</li>
+														<li>interaction Design</li>
+														<li>Storyboarding</li>
+														<li>Prototyping</li>
+														<li>User Flows</li>
+														<li>Design Thinking</li>
+													</ul>
+											</div>
+											<div class="col-6 col-12-small">
+												<h3>User Research</h3>
+													<ul class="alt">
+														<li>Brainstorming</li>
+														<li>Interviews</li>
+														<li>Usability Testing</li>
+														<li>Single Ease Questions</li>
+														<li>System Uability Scale</li>
+											</div>
+											<!-- Break -->
+											<!-- <div class="col-4 col-12-medium">
+												<h3>Interdum sapien gravida</h3>
+												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+											</div>
+											<div class="col-4 col-12-medium">
+												<h3>Faucibus consequat lorem</h3>
+												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+											</div>
+											<div class="col-4 col-12-medium">
+												<h3>Accumsan montes viverra</h3>
+												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+											</div> -->
+										</div>
+									</div>
+							</section>			
 					</div>
 
 				<!-- Contact -->
-					<section id="contact">
+					<!-- <section id="contact">
 						<div class="inner">
 							<section>
 								<form method="post" action="#">
@@ -206,18 +321,18 @@
 								</section>
 							</section>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Footer -->
 					<footer id="footer">
 						<div class="inner">
-							<ul class="icons">
+							<!-- <ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands alt fa-behance"><span class="label">Behance</span></a></li>
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
+							</ul> -->
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 							</ul>
