--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 							<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+									<a class="image">
+										<img src="images/pic11.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
