--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										<img src="images/pic01.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">SalaamUstadz (Ustadz)</a></h3>
+										<h3>SalaamUstadz (Ustadz)</h3>
 										<p>Ustadz Consultation App</p>
 									</header>
 								</article>
@@ -79,7 +79,7 @@
 										<img src="images/pic02.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Berbagi Kerja</a></h3>
+										<h3>Berbagi Kerja</h3>
 										<p>Find and Land Job App</p>
 									</header>
 								</article>
@@ -88,7 +88,7 @@
 										<img src="images/pic03.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">PlayMe</a></h3>
+										<h3>PlayMe</h3>
 										<p>Game Centre Top Up</p>
 									</header>
 								</article>
@@ -97,7 +97,7 @@
 										<img src="images/pic04.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">SalaamUstadz (Jamaah)</a></h3>
+										<h3>SalaamUstadz (Jamaah)</h3>
 										<p>Ustadz Consultation App</p>
 									</header>
 								</article>
