--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 														<li>Interviews</li>
 														<li>Usability Testing</li>
 														<li>Single Ease Questions</li>
-														<li>System Uability Scale</li>
+														<li>System Usability Scale</li>
 											</div>
 											<!-- Break -->
 											<!-- <div class="col-4 col-12-medium">
