--- a/index.html
+++ b/index.html
@@ -532,10 +532,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>PlayMe!</h4>		      
-					      <p>The top up application in the game center makes it easy for users because it can be done anywhere and anytime without having to queue.</p>
+					      <h4>Products Promotion Design</h4>		      
+					      <p>Creating designs for product promotion on the marketplace that can increase the selling value of products and attract buyers.</p>
 
-					      <div class="categories">#Mobile App #UX Design</div>			               
+					      <div class="categories">#Branding #Visual Design #Graphic Design</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -592,10 +592,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Product Promotion Design</h4>		      
-					      <p>Creating designs for product promotion on the marketplace that can increase the selling value of products and attract buyers.</p>
+					      <h4>PlayMe!</h4>		      
+					      <p>The top up application in the game center makes it easy for users because it can be done anywhere and anytime without having to queue.</p>
 
-					      <div class="categories">#Branding #Visual Design</div>			               
+					      <div class="categories">#Mobile App #UX Design</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -612,10 +612,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Lighthouse</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Products Promotion Design 2</h4>		      
+					      <p>Designed for details product promotion (benefits) on the marketplace that can inform buyers about products details.</p>
 
-					      <div class="categories">Web Development</div>			               
+					      <div class="categories">#Branding #Graphic Design</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -656,7 +656,7 @@
 		   <div class="row button-section">
 			<div class="col-twelve">
 				<br><br>
-				<a href="https://www.behance.net/dhifamuthia" title="More Portfolio" class="button button-primary">More</a>
+				<a href="https://www.behance.net/dhifamuthia" title="More Portfolio" class="button button-primary">See More</a>
 			</div>   		
 		</div>
 	</div> <!-- /portfolio-content --> 
