--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -113,7 +112,7 @@
 
    				<img src="images/profile-pic.png" alt="Profile Picture">
 
-   				<p class="lead">Hi, i'm Dhifa. I am a Fresh Graduate from UIN Syarif Hidayatullah Jakarta. I had experience being a designer in several projects and also have an interest and passion in UIUX Design.</p>
+   				<p class="lead">Hi, i'm Dhifa. I am a Fresh Graduate from State Islamic University Syarif Hidayatullah Jakarta majoring in Informatics Engineering. I had experience being a UI/UX designer in some projects at campus.</p>
    			</div>   			
 
    		</div>   		
@@ -125,7 +124,6 @@
 
    			<h3>Profile</h3>
    			<p>I have organizational experience in the advocacy and student affairs division, that's why I am used to doing team work and group discussions but still maintaining my studies and graduating on time with good grades.
-				I have organizational experience in the advocacy and student affairs division, that's why I am used to doing team work and group discussions but still maintaining my studies and graduating on time with good grades. 
 				Committed to utilizing my skills to further the mission of a company. Knowledgeable in user interface, user exprience, testing, and prototyping. Able to effectively self-manage during independent projects, as well as collaborate in a team setting.</p>
 
    			<ul class="info-list">
@@ -161,37 +159,29 @@
 				I've kept it to just my favorites. If you use a different prototyping tool that works well in your established workflow, 
 				I would be happy to learn it. </p>
 
-				<ul class="skill-bars">
+				<ul class="timeline-content">
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>User Interface Design</strong>
+				   	<strong>User Interface (UI) Design</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
 				   	<strong>User Research</strong>
 				   </li>
-				   <!-- <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>Interaction Design</strong>
-				   </li> -->
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
 				   	<strong>Design Thinking</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
 				   	<strong>Wireframes & Flows</strong>
 				   </li>
 				   <li>
-					<div class="progress percent90"><span>90%</span></div>
 					<strong>Interative Prototyping</strong>
 					</li>
 					<li>
-						<div class="progress percent75"><span>75%</span></div>
+						<strong>Design System</strong>
+					</li>
+					<li>
 						<strong>Usability Testing</strong>
 					</li>
 					<li>
-						<div class="progress percent75"><span>75%</span></div>
 						<strong>Storyboarding</strong>
 					</li>
       
@@ -204,7 +194,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="mailto:fayasari611@gmail.com" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="https://drive.google.com/drive/folders/139POBeOA3AySs6zidfFpnPQyo0mm_BKm?usp=sharing" title="Download CV" class="button button-primary">CV</a>
+   			<a href="https://drive.google.com/file/d/1lIuXX1veh0wA7EjnKq3bmb6DBSDfpP7E/view?usp=sharing" title="Download CV" class="button button-primary">CV</a>
    		</div>   		
    	</div>
 
@@ -512,9 +502,9 @@
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title">Berbagi Kerja</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+											#Mobile App #UI Design
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
@@ -632,10 +622,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Salad</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Berbagi Kerja</h4>		      
+					      <p>Designed mobile application about partnership platform for provider (service) and applicant (job seekers) using Figma. Create user flow, mockup, wireframe, prototype, and UI element by using Figma.</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">#Mobile App #UI Design</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -1039,7 +1029,7 @@
      			<ul class="footer-social">        
 			      <li><a href="https://www.behance.net/dhifamuthia"><i class="fa fa-behance"></i></a></li>
 			      <li><a href="https://id.pinterest.com/dhifamutiawulansari/"><i class="fa fa-pinterest"></i></a></li>
-			      <li><a href="https://dribbble.com/dhifaaam"><i class="fa fa-beetle"></i></a></li>
+			      <li><a href="https://dribbble.com/dhifaaam"><i class="fa fa-dribbble"></i></a></li>
 			      <li><a href="https://www.instagram.com/dhifaa.m/"><i class="fa fa-instagram"></i></a></li>
 			   </ul> 
 	      		
