--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
    			<h3>Profile</h3>
    			<p>I have organizational experience in the advocacy and student affairs division, that's why I am used to doing team work and group discussions but still maintaining my studies and graduating on time with good grades.
-				Committed to utilizing my skills to further the mission of a company. Knowledgeable in user interface, user exprience, testing, and prototyping. Able to effectively self-manage during independent projects, as well as collaborate in a team setting.</p>
+				Committed to utilizing my skills to further the mission of a company. Knowledgeable in Design System, User Interface, User Research, Usability Testing, and low-high prototyping. Able to effectively self-manage during independent projects, as well as collaborate in a team setting.</p>
 
    			<ul class="info-list">
    				<li>
@@ -182,7 +182,7 @@
 						<strong>Usability Testing</strong>
 					</li>
 					<li>
-						<strong>Storyboarding</strong>
+						<strong>Competitive Analyst</strong>
 					</li>
       
 				</ul> <!-- /skill-bars -->		
@@ -228,7 +228,7 @@
 
    			<div class="timeline-wrap">
 
-   				<div class="timeline-block">
+   				<!-- <div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-briefcase"></i>
@@ -250,7 +250,7 @@
 							</p>
 	   				</div>
 
-	   			</div> <!-- /timeline-block -->
+	   			</div>  -->
 
 	   			<div class="timeline-block">
 
@@ -260,7 +260,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>UI Mentor</h3>
-	   					<p>September 2021</p>
+	   					<p>September 2021 & 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -287,9 +287,11 @@
 	   					<h4>State Islamic University Syarif Hidayatullah Jakarta (SalaamUstadz)</h4>
 	   					<p>
 							<li>Worked directly with stakeholders to discuss the purpose of making the application.</li>
+							<li>Doing research (interview) with UIN Jakarta ustadz and some potential users.</li>
 							<li>Created design for application mobile and designed using the Design Thinking method and perform Usability Testing.</li>
 							<li>worked collaboratively with team members to produce work in an afficient manner.</li>
-							<li>Utilitized knowledge to create Empathy Map, How Might We Table, Mind Map, user personas, user flow, mockup, wireframe, prototype, and UI element by using Figma.</li>
+							<li>Designing 2 applications for ustadz and jamaah, and until now still in the process of coding by the developers .</li>
+							<li>Utilitized knowledge to create Empathy Map, How Might We Table, Mind Map, user personas, Storyboarding, user flow, mockup, wireframe, prototype, and UI element by using Figma.</li>
 						</p>
 	   				</div>
 	   			</div> <!-- /timeline-block -->
@@ -339,7 +341,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>Bachelor Degree</h3>
-	   					<p>September 2018 - July 2022</p>
+	   					<p>Sept 2018 - Jul 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
@@ -356,34 +358,34 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Senior High School</h3>
-	   					<p>June 2015 - May 2018</p>
+	   					<h3>Course</h3>
+	   					<p>Sept - Oct 2022</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>MAN 2 Tangerang</h4>
-	   					<p>Since I was a child, I studied at a school with an Islamic background. From elementary to high school I learned to organize such as scouts, student councils, and extracurricular organizations.</p>
+	   					<h4>Rakamin Academy</h4>
+	   					<p>I deepened my knowledge and upgraded my skills at Rakamin Academy. I learned a lot with senior Product designers and researchers in several companies.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
 
-	   			<!-- <div class="timeline-block">
+	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Course</h3>
+	   					<p>Sept 2022 - present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Udemy</h4>
+	   					<p>I upgraded my skills on important things in building an interface design such as system design, auto layout, motion design, and many more.</p>
 	   				</div>
 
-	   			</div> /timeline-block -->
+	   			</div> <!-- /timeline-block -->
 
    			</div> <!-- /timeline-wrap -->   			
 
