--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://www.behance.net/gallery/154539185/SalaamUstadz-App-Design-Real-Project">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
